--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">arnold</string>
+    <string name="options">Επιλογές</string>
     <string name="mySchedule">Το πρόγραμμα μου</string>
     <string name="myBody">Το Σώμα μου</string>
     <string name="myProgress">Η πρόοδος μου</string>
