Add add progress activity Go to add progress activity when pressing the plus floating button in my progress screen Implement the on click view listener in my progress activity Remove the toast import Add a basic progress model

--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -38,4 +38,6 @@
     <string name="my_gym_subscription_hint">ποσό</string>
     <string name="my_gym_registration_label">Εγγραφή</string>
     <string name="my_gym_registration_hint">ημερομηνία</string>
+    <string name="title_activity_add_progress">AddProgressActivity</string>
+    <string name="add_progress">Προσθήκη Προόδου</string>
 </resources>
